--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "git+https://github.com/jopyth/MMM-Remote-Control#readme",
   "dependencies": {
+    "body-parser": "latest",
     "simple-git": "latest",
-    "body-parser": "latest"
+    "uuid": "^3.3.2"
   }
 }
