--- a/.github/ISSUE_TEMPLATE/Bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug_report.yml
@@ -9,7 +9,7 @@ body:
         You should have the steps to being able to reproduce this bug, for us to check if it's truly a bug.
 
         Also, you accept that, if this issue it's invalid in any way, will be discarded without receiving any response about it.
-        If you're not sure if it's a bug, please [ask here](https://github.com/ezeholz/MMM-Remote-Control/discussions).
+        If you're not sure if it's a bug, please [ask here](https://github.com/Jopyth/MMM-Remote-Control/discussions).
         
         Thanks for taking the time to help Remote Control get better every day!
   - type: input
@@ -94,7 +94,7 @@ body:
       description: |
         Paste the log you're getting, and possibly the error.
         **Please, make sure that none of your personal information, such as IP or passwords are exposed.**
-      render: shell
+      render: Shell
     validations:
       required: true
   - type: textarea
@@ -107,7 +107,7 @@ body:
         - IPs from MM instance, or the ones that are whitelisted. Please, replace them with *** so we're totally sure that you have set them.
         - API keys, Tokens from different modules, URL to private calendars.
         - Directions or Personal data.
-      render: javascript
+      render: JavaScript
     validations:
       required: true
   - type: textarea
