--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "type": "git",
     "url": "git+https://github.com/jopyth/MMM-Remote-Control"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "keywords": [
     "magic mirror",
     "smart mirror",
@@ -22,7 +25,6 @@
   "homepage": "https://github.com/jopyth/MMM-Remote-Control#readme",
   "dependencies": {
     "body-parser": "latest",
-    "node-fetch": "^2.7.0",
     "simple-git": "latest",
     "uuid": "^3.3.2"
   },
@@ -34,6 +36,7 @@
     "globals": "^15.14.0"
   },
   "scripts": {
+    "download_modules": "node ./scripts/download_modules_manually.mjs",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "test": "npm run lint && npm run test:spelling",
