--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -1,6 +1,6 @@
-name: 'Close stale issues and PRs'
+name: "Close stale issues and PRs"
 on:
-  schedule: [{cron: "0 12 * * *"},{cron: "0 0 * * *"}]
+  schedule: [{ cron: "0 12 * * *" }, { cron: "0 0 * * *" }]
 
 jobs:
   stale:
@@ -9,7 +9,7 @@ jobs:
       issues: write
       pull-requests: write
     steps:
-      - uses: actions/stale@v4
+      - uses: actions/stale@v9
         with:
           stale-issue-message: |
             This issue has been automatically marked as stale because it has not had
@@ -23,8 +23,8 @@ jobs:
           days-before-pr-stale: 30
           days-before-issue-close: 7
           days-before-pr-close: 7
-          stale-issue-label: 'stale'
-          exempt-issue-labels: 'working,help wanted,PR Welcome!'
-          stale-pr-label: 'stale'
-          exempt-pr-labels: 'working,help wanted'
+          stale-issue-label: "stale"
+          exempt-issue-labels: "working,help wanted,PR Welcome!"
+          stale-pr-label: "stale"
+          exempt-pr-labels: "working,help wanted"
           exempt-all-milestones: true
