--- a/cspell.config.json
+++ b/cspell.config.json
@@ -40,7 +40,6 @@
     "MONITORSTATUS",
     "MONITORTIMED",
     "MONITORTOGGLE",
-    "mymodulename",
     "mypayload",
     "Mysh",
     "navicon",
@@ -57,6 +56,7 @@
     "showalert",
     "SHOWALL",
     "somthingelse",
+    "stylelint",
     "TOGGLEFULLSCREEN",
     "UPDATEMM",
     "userpresence",
@@ -71,7 +71,5 @@
     "translations/**",
     "*.min.js"
   ],
-  "dictionaries": [
-    "node"
-  ]
+  "dictionaries": ["node"]
 }
