--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.3",
+    "jquery": "^3.7.1",
     "showdown": "^2.1.0",
     "simple-git": "^3.27.0",
     "uuid": "^11.1.0"
