--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
     "cspell": "^8.17.5",
     "eslint": "^9.21.0",
     "eslint-plugin-import": "^2.31.0",
