Prevent merge conflicts with modules.json while updating

--- a/cspell.config.json
+++ b/cspell.config.json
@@ -69,6 +69,7 @@
   ],
   "ignorePaths": [
     "modules.json",
+    "modules.json.template",
     "node_modules/**",
     "settings.json",
     "translations/**",
