--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "download_modules": "node ./scripts/download_modules_manually.mjs",
     "lint": "eslint && stylelint **/*.css && markdownlint . --ignore node_modules && prettier . --check",
     "lint:fix": "eslint --fix && stylelint **/*.css --fix && markdownlint . --ignore node_modules --fix && prettier . --write",
+    "postinstall": "cp modules.json.template modules.json",
     "test": "npm run lint && npm run test:spelling",
     "test:spelling": "cspell ."
   },
