fix: replace not working discussions URL with forum URL

--- a/.github/ISSUE_TEMPLATE/Bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/Bug_report.yaml
@@ -9,7 +9,7 @@ body:
         You should have the steps to being able to reproduce this bug, for us to check if it's truly a bug.
 
         Also, you accept that, if this issue it's invalid in any way, will be discarded without receiving any response about it.
-        If you're not sure if it's a bug, please [ask here](https://github.com/Jopyth/MMM-Remote-Control/discussions).
+        If you're not sure if it's a bug, please [ask here](https://forum.magicmirror.builders/category/29/troubleshooting).
 
         Thanks for taking the time to help Remote Control get better every day!
   - type: input
