--- a/.github/ISSUE_TEMPLATE/config.yaml
+++ b/.github/ISSUE_TEMPLATE/config.yaml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Discussions
-    url: https://github.com/Jopyth/MMM-Remote-Control/discussions
+    url: https://forum.magicmirror.builders/category/29/troubleshooting
     about: Don't know how to do it? Ask the community!
