--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   ],
   "scripts": {
     "download_modules": "node ./scripts/download_modules_manually.mjs",
-    "lint": "eslint && stylelint **/*.css && markdownlint . --ignore node_modules && prettier . --check",
-    "lint:fix": "eslint --fix && stylelint **/*.css --fix && markdownlint . --ignore node_modules --fix && prettier . --write",
+    "lint": "eslint && prettier . --check",
+    "lint:fix": "eslint --fix && prettier . --write",
     "postinstall": "cp modules.json.template modules.json",
     "test": "node --run lint && node --run test:spelling",
     "test:spelling": "cspell ."
@@ -38,17 +38,16 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@eslint/css": "^0.8.1",
     "@eslint/js": "^9.27.0",
+    "@eslint/json": "^0.12.0",
+    "@eslint/markdown": "^6.4.0",
     "@stylistic/eslint-plugin": "^4.2.0",
     "cspell": "^9.0.1",
     "eslint": "^9.27.0",
     "eslint-plugin-import-x": "^4.11.1",
     "globals": "^16.1.0",
-    "markdownlint-cli": "^0.44.0",
-    "prettier": "^3.5.3",
-    "stylelint": "^16.19.1",
-    "stylelint-config-standard": "^38.0.0",
-    "stylelint-prettier": "^5.0.3"
+    "prettier": "^3.5.3"
   },
   "engines": {
     "node": ">=18"
