--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -1,6 +1,8 @@
 name: "Close stale issues and PRs"
 on:
-  schedule: [{ cron: "0 12 * * *" }, { cron: "0 0 * * *" }]
+  schedule:
+    - cron: "0 0 * * 2" # Every Tuesday at midnight
+    - cron: "0 0 * * 6" # Every Saturday at midnight
 
 jobs:
   stale:
