feat(tests): add initial unit test & coverage foundation

--- a/cspell.config.json
+++ b/cspell.config.json
@@ -68,6 +68,7 @@
     "YOURAPIKEY"
   ],
   "ignorePaths": [
+    "coverage/**",
     "modules.json",
     "modules.json.template",
     "node_modules/**",
