--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "lint": "eslint && prettier . --check",
     "lint:fix": "eslint --fix && prettier . --write",
     "postinstall": "cp modules.json.template modules.json",
-    "test": "node --run lint && node --run test:spelling",
-    "test:spelling": "cspell ."
+    "test": "node --run lint && node --run test:spelling && node --run test:unit",
+    "test:coverage": "c8 --all node --test tests/unit/**/*.test.js",
+    "test:spelling": "cspell .",
+    "test:unit": "node --test tests/unit/**/*.test.js"
   },
   "dependencies": {
     "showdown": "^2.1.0",
@@ -43,10 +45,37 @@
     "@eslint/json": "^0.13.2",
     "@eslint/markdown": "^7.2.0",
     "@stylistic/eslint-plugin": "^5.3.1",
+    "c8": "^10.1.3",
     "cspell": "^9.2.1",
     "eslint": "^9.35.0",
     "eslint-plugin-import-x": "^4.16.1",
     "globals": "^16.3.0",
     "prettier": "^3.6.2"
+  },
+  "c8": {
+    "reporter": [
+      "text-summary",
+      "lcov"
+    ],
+    "include": [
+      "lib/**/*.js",
+      "node_helper.js",
+      "MMM-Remote-Control.js"
+    ],
+    "exclude": [
+      "tests/**",
+      "translations/**",
+      "docs/**",
+      "img/**",
+      "remote.html",
+      "remote.js",
+      "remote.css",
+      "**/*.md"
+    ],
+    "check-coverage": true,
+    "branches": 5,
+    "lines": 4,
+    "functions": 4,
+    "statements": 4
   }
 }
