--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "globals": "^16.3.0",
     "prettier": "^3.6.2"
   },
+  "overrides": {
+    "prismjs": "^1.30.0"
+  },
   "c8": {
     "reporter": [
       "text-summary",
