--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "dependencies": {
     "showdown": "^2.1.0",
     "simple-git": "^3.28.0",
-    "swagger-ui": "^5.29.0",
+    "swagger-ui-dist": "^5.29.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
@@ -52,9 +52,7 @@
     "globals": "^16.4.0",
     "prettier": "^3.6.2"
   },
-  "overrides": {
-    "prismjs": "^1.30.0"
-  },
+  
   "c8": {
     "reporter": [
       "text-summary",
