test(infra): add shims and consolidate test docs; link main README to tests/README; include API in coverage

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     ],
     "include": [
       "lib/**/*.js",
+      "API/**/*.js",
       "node_helper.js",
       "MMM-Remote-Control.js"
     ],
